[package]
name = "carta"
description = "Document converter library: parse a source format and render it to a target format."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = ["full"]
full = ["read-commonmark", "read-json", "read-native", "read-html", "read-csv", "read-tsv", "read-opml", "read-rst", "read-ipynb", "read-mediawiki", "read-dokuwiki", "read-jira", "read-man", "write-html", "write-html4", "write-json", "write-plain", "write-native", "write-latex", "write-commonmark", "write-markdown", "write-gfm", "write-rst", "write-mediawiki", "write-typst", "write-dokuwiki", "write-jira", "write-asciidoc", "write-man", "write-opml", "write-beamer", "write-revealjs", "write-ipynb", "standalone", "metadata-file"]
# Standalone output: the template engine, context builder, document wrapping, default templates,
# and the `-s`/`--template`/`-V`/`-M` inputs. Works with any reader/writer; no commonmark required.
standalone = ["carta-core/template", "dep:serde_json"]
# `--metadata-file`: parses YAML/JSON metadata files through the commonmark machinery, so it must
# pull in that reader — declaring the dependency makes the broken half-configured build unrepresentable.
metadata-file = ["standalone", "read-commonmark"]
read-commonmark = ["dep:carta-readers", "carta-readers/commonmark"]
read-json = ["dep:carta-readers", "carta-readers/json"]
read-native = ["dep:carta-readers", "carta-readers/native"]
read-html = ["dep:carta-readers", "carta-readers/html"]
read-csv = ["dep:carta-readers", "carta-readers/csv"]
read-tsv = ["dep:carta-readers", "carta-readers/tsv"]
read-opml = ["dep:carta-readers", "carta-readers/opml"]
read-rst = ["dep:carta-readers", "carta-readers/rst"]
read-ipynb = ["dep:carta-readers", "carta-readers/ipynb"]
read-mediawiki = ["dep:carta-readers", "carta-readers/mediawiki"]
read-dokuwiki = ["dep:carta-readers", "carta-readers/dokuwiki"]
read-jira = ["dep:carta-readers", "carta-readers/jira"]
read-man = ["dep:carta-readers", "carta-readers/man"]
write-html = ["dep:carta-writers", "carta-writers/html"]
write-html4 = ["dep:carta-writers", "carta-writers/html"]
write-json = ["dep:carta-writers", "carta-writers/json"]
write-plain = ["dep:carta-writers", "carta-writers/plain"]
write-native = ["dep:carta-writers", "carta-writers/native"]
write-latex = ["dep:carta-writers", "carta-writers/latex"]
write-commonmark = ["dep:carta-writers", "carta-writers/commonmark"]
write-markdown = ["dep:carta-writers", "carta-writers/markdown"]
write-gfm = ["dep:carta-writers", "carta-writers/gfm"]
write-rst = ["dep:carta-writers", "carta-writers/rst"]
write-mediawiki = ["dep:carta-writers", "carta-writers/mediawiki"]
write-typst = ["dep:carta-writers", "carta-writers/typst"]
write-dokuwiki = ["dep:carta-writers", "carta-writers/dokuwiki"]
write-jira = ["dep:carta-writers", "carta-writers/jira"]
write-asciidoc = ["dep:carta-writers", "carta-writers/asciidoc"]
write-man = ["dep:carta-writers", "carta-writers/man"]
write-opml = ["dep:carta-writers", "carta-writers/opml"]
write-beamer = ["dep:carta-writers", "carta-writers/beamer"]
write-revealjs = ["dep:carta-writers", "carta-writers/revealjs"]
write-ipynb = ["dep:carta-writers", "carta-writers/ipynb"]

[dependencies]
carta-ast = { workspace = true }
carta-core = { workspace = true }
# Referenced by path (not the workspace table) so this crate can own their feature selection:
# `default-features = false` cannot override an inherited workspace dependency.
carta-readers = { path = "../carta-readers", default-features = false, optional = true }
carta-writers = { path = "../carta-writers", default-features = false, optional = true }
# `meta-json`: serializes the rendered metadata into the standalone template context.
serde_json = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "convert"
harness = false
