[package]
name = "carta"
description = "Document converter library: parse a source format and render it to a target format."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["markup", "markdown", "document", "converter", "commonmark"]
categories = ["command-line-utilities", "text-processing", "parser-implementations"]
publish.workspace = true
# The golden-snapshot suite (thousands of `.snap` files under tests/) is developer-only: consumers
# never compile the integration tests, so keep them out of the published crate rather than shipping
# ~1 MiB of test data to everyone who installs or depends on `carta`.
exclude = ["/tests"]

# docs.rs builds default features only; enable all so every reader/writer is documented.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = ["full", "cli"]
# The `carta` command-line binary and its argument parser. Enabled by default so `cargo install carta`
# yields the tool; library-only users set `default-features = false` to drop it (and `clap`). It pulls
# the standalone and metadata-file machinery the CLI drives — pair with format features (or `full`) to
# choose what the binary can convert.
cli = ["dep:clap", "standalone", "metadata-file", "fetch", "carta-ast/serde", "carta-core/serde"]
# Fetch remote resources over HTTP(S) when inlining them for self-contained HTML (`--embed-resources`):
# carries the HTTP client. Without it, only local and already-inline resources are inlined and a remote
# reference is left external. Part of `cli` so the installed tool is self-contained-capable by default.
fetch = ["dep:ureq"]
full = ["read-commonmark", "read-json", "read-native", "read-html", "read-csv", "read-tsv", "read-opml", "read-rst", "read-ipynb", "read-mediawiki", "read-dokuwiki", "read-jira", "read-man", "read-latex", "read-org", "read-rtf", "read-docx", "read-epub", "read-odt", "write-html", "write-html4", "write-json", "write-plain", "write-native", "write-latex", "write-commonmark", "write-markdown", "write-gfm", "write-rst", "write-mediawiki", "write-typst", "write-dokuwiki", "write-jira", "write-asciidoc", "write-man", "write-opml", "write-org", "write-beamer", "write-revealjs", "write-ipynb", "write-epub", "write-docx", "write-odt", "write-rtf", "highlight", "standalone", "metadata-file"]
# Syntax highlighting for code blocks, plus the CLI's language/style listings and idiomatic mode. Turns
# the feature on in any compiled writers and carries the tokenizer catalog for the listing/print flags.
highlight = ["dep:carta-highlight", "carta-core/highlight", "carta-writers?/highlight"]
# Standalone output: the template engine, context builder, document wrapping, default templates,
# and the `-s`/`--template`/`-V`/`-M` inputs. Works with any reader/writer; no commonmark required.
standalone = ["carta-core/template", "dep:serde_json"]
# `--metadata-file`: parses YAML/JSON metadata files through the commonmark machinery, so it must
# pull in that reader — declaring the dependency makes the broken half-configured build unrepresentable.
metadata-file = ["standalone", "read-commonmark"]
read-commonmark = ["dep:carta-readers", "carta-readers/commonmark"]
read-json = ["dep:carta-readers", "carta-readers/json"]
read-native = ["dep:carta-readers", "carta-readers/native"]
read-html = ["dep:carta-readers", "carta-readers/html"]
read-csv = ["dep:carta-readers", "carta-readers/csv"]
read-tsv = ["dep:carta-readers", "carta-readers/tsv"]
read-opml = ["dep:carta-readers", "carta-readers/opml"]
read-rst = ["dep:carta-readers", "carta-readers/rst"]
read-ipynb = ["dep:carta-readers", "carta-readers/ipynb"]
read-mediawiki = ["dep:carta-readers", "carta-readers/mediawiki"]
read-dokuwiki = ["dep:carta-readers", "carta-readers/dokuwiki"]
read-jira = ["dep:carta-readers", "carta-readers/jira"]
read-man = ["dep:carta-readers", "carta-readers/man"]
read-latex = ["dep:carta-readers", "carta-readers/latex"]
read-org = ["dep:carta-readers", "carta-readers/org"]
read-rtf = ["dep:carta-readers", "carta-readers/rtf"]
read-docx = ["dep:carta-readers", "carta-readers/docx"]
read-epub = ["dep:carta-readers", "carta-readers/epub"]
read-odt = ["dep:carta-readers", "carta-readers/odt"]
write-html = ["dep:carta-writers", "carta-writers/html"]
write-html4 = ["dep:carta-writers", "carta-writers/html"]
write-json = ["dep:carta-writers", "carta-writers/json"]
write-plain = ["dep:carta-writers", "carta-writers/plain"]
write-native = ["dep:carta-writers", "carta-writers/native"]
write-latex = ["dep:carta-writers", "carta-writers/latex"]
write-commonmark = ["dep:carta-writers", "carta-writers/commonmark"]
write-markdown = ["dep:carta-writers", "carta-writers/markdown"]
write-gfm = ["dep:carta-writers", "carta-writers/gfm"]
write-rst = ["dep:carta-writers", "carta-writers/rst"]
write-mediawiki = ["dep:carta-writers", "carta-writers/mediawiki"]
write-typst = ["dep:carta-writers", "carta-writers/typst"]
write-dokuwiki = ["dep:carta-writers", "carta-writers/dokuwiki"]
write-jira = ["dep:carta-writers", "carta-writers/jira"]
write-asciidoc = ["dep:carta-writers", "carta-writers/asciidoc"]
write-man = ["dep:carta-writers", "carta-writers/man"]
write-opml = ["dep:carta-writers", "carta-writers/opml"]
write-org = ["dep:carta-writers", "carta-writers/org"]
write-beamer = ["dep:carta-writers", "carta-writers/beamer"]
write-revealjs = ["dep:carta-writers", "carta-writers/revealjs"]
write-ipynb = ["dep:carta-writers", "carta-writers/ipynb"]
write-epub = ["dep:carta-writers", "carta-writers/epub"]
write-docx = ["dep:carta-writers", "carta-writers/docx"]
write-odt = ["dep:carta-writers", "carta-writers/odt"]
write-rtf = ["dep:carta-writers", "carta-writers/rtf"]

[dependencies]
carta-ast = { workspace = true }
carta-core = { workspace = true }
# The syntax-highlighting catalog: pulled in by the `highlight` feature for the CLI's language/style
# listings and for building the highlighter and theme the writers colorize code blocks with.
carta-highlight = { workspace = true, optional = true }
# Referenced by path (not the workspace table) so this crate can own their feature selection:
# `default-features = false` cannot override an inherited workspace dependency. The `version` makes
# the published package depend on the registry release; the path is used for in-workspace builds.
carta-readers = { path = "../carta-readers", version = "0.0.6", default-features = false, optional = true }
carta-writers = { path = "../carta-writers", version = "0.0.6", default-features = false, optional = true }
# `meta-json`: serializes the rendered metadata into the standalone template context.
serde_json = { workspace = true, optional = true }
# CLI-only; kept out of a library build via the optional `cli` feature.
clap = { workspace = true, optional = true }
# The HTTP client used to fetch remote resources for self-contained HTML. Gated behind `fetch`; a
# rustls TLS stack keeps the build free of a system OpenSSL dependency.
ureq = { version = "3", default-features = false, features = ["rustls"], optional = true }
# Grows the current thread's stack on demand while a document is serialized, so a pathologically deep
# block/inline tree cannot exhaust the caller's stack during the writer's per-level recursion. Kept
# on this thread rather than a worker so the writer options, which may hold thread-affine state, need
# not be shareable across threads. A tiny, single-purpose crate; the equivalent hand-rolled stack
# switch would require `unsafe`, which this workspace forbids.
stacker = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }

# The command-line binary. Gated on `cli` so a library-only build (`default-features = false`) neither
# compiles it nor pulls its dependencies.
[[bin]]
name = "carta"
path = "src/main.rs"
required-features = ["cli"]

[[bench]]
name = "convert"
harness = false
