[package]
name = "carta"
description = "Document converter library: parse a source format and render it to a target format."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["markup", "markdown", "document", "converter", "commonmark"]
categories = ["command-line-utilities", "text-processing", "parser-implementations"]
publish.workspace = true
# The golden-snapshot suite (~1 MiB under tests/) is developer-only; keep it out of the published crate.
exclude = ["/tests"]

# docs.rs builds default features only; enable all so every reader/writer is documented.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Points `cargo binstall` at the prebuilt release archives (binary at the archive root).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ bin }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[lints]
workspace = true

[features]
default = ["full", "cli"]
# The `carta` binary. Default so `cargo install carta` yields the tool; library-only users set
# `default-features = false`. Pair with format features (or `full`) to choose what it converts.
cli = [
    "dep:clap",
    "dep:clap_complete",
    "dep:clap_mangen",
    "standalone",
    "metadata-file",
    "fetch",
    "carta-ast/serde",
    "carta-core/serde",
]
# HTTP(S) fetching of remote resources for `--embed-resources`; without it a remote reference is left external.
fetch = ["dep:ureq"]
full = ["read-commonmark", "read-json", "read-native", "read-html", "read-csv", "read-tsv", "read-opml", "read-rst", "read-ipynb", "read-mediawiki", "read-dokuwiki", "read-jira", "read-man", "read-latex", "read-org", "read-rtf", "read-docx", "read-epub", "read-odt", "write-html", "write-html4", "write-json", "write-plain", "write-native", "write-latex", "write-commonmark", "write-markdown", "write-gfm", "write-rst", "write-mediawiki", "write-typst", "write-dokuwiki", "write-jira", "write-asciidoc", "write-man", "write-opml", "write-org", "write-beamer", "write-revealjs", "write-ipynb", "write-epub", "write-docx", "write-odt", "write-rtf", "highlight", "standalone", "metadata-file"]
# Syntax highlighting for code blocks, plus the CLI's language/style listings and idiomatic mode.
highlight = ["dep:carta-highlight", "carta-core/highlight", "carta-writers?/highlight"]
# Embeds the copyleft-or-unspecified-license grammar set, which is an explicit choice.
embed-copyleft-grammars = ["highlight", "carta-highlight/embed-copyleft-grammars"]
# Standalone output: template engine, context builder, wrapping, and the `-s`/`--template`/`-V`/`-M` inputs.
standalone = ["carta-core/template", "dep:serde_json"]
# `--metadata-file` parses metadata through the commonmark machinery, so it must pull in that reader.
metadata-file = ["standalone", "read-commonmark"]
read-commonmark = ["dep:carta-readers", "carta-readers/commonmark"]
read-json = ["dep:carta-readers", "carta-readers/json"]
read-native = ["dep:carta-readers", "carta-readers/native"]
read-html = ["dep:carta-readers", "carta-readers/html"]
read-csv = ["dep:carta-readers", "carta-readers/csv"]
read-tsv = ["dep:carta-readers", "carta-readers/tsv"]
read-opml = ["dep:carta-readers", "carta-readers/opml"]
read-rst = ["dep:carta-readers", "carta-readers/rst"]
read-ipynb = ["dep:carta-readers", "carta-readers/ipynb"]
read-mediawiki = ["dep:carta-readers", "carta-readers/mediawiki"]
read-dokuwiki = ["dep:carta-readers", "carta-readers/dokuwiki"]
read-jira = ["dep:carta-readers", "carta-readers/jira"]
read-man = ["dep:carta-readers", "carta-readers/man"]
read-latex = ["dep:carta-readers", "carta-readers/latex"]
read-org = ["dep:carta-readers", "carta-readers/org"]
read-rtf = ["dep:carta-readers", "carta-readers/rtf"]
read-docx = ["dep:carta-readers", "carta-readers/docx"]
read-epub = ["dep:carta-readers", "carta-readers/epub"]
read-odt = ["dep:carta-readers", "carta-readers/odt"]
write-html = ["dep:carta-writers", "carta-writers/html"]
write-html4 = ["dep:carta-writers", "carta-writers/html"]
write-json = ["dep:carta-writers", "carta-writers/json"]
write-plain = ["dep:carta-writers", "carta-writers/plain"]
write-native = ["dep:carta-writers", "carta-writers/native"]
write-latex = ["dep:carta-writers", "carta-writers/latex"]
write-commonmark = ["dep:carta-writers", "carta-writers/commonmark"]
write-markdown = ["dep:carta-writers", "carta-writers/markdown"]
write-gfm = ["dep:carta-writers", "carta-writers/gfm"]
write-rst = ["dep:carta-writers", "carta-writers/rst"]
write-mediawiki = ["dep:carta-writers", "carta-writers/mediawiki"]
write-typst = ["dep:carta-writers", "carta-writers/typst"]
write-dokuwiki = ["dep:carta-writers", "carta-writers/dokuwiki"]
write-jira = ["dep:carta-writers", "carta-writers/jira"]
write-asciidoc = ["dep:carta-writers", "carta-writers/asciidoc"]
write-man = ["dep:carta-writers", "carta-writers/man"]
write-opml = ["dep:carta-writers", "carta-writers/opml"]
write-org = ["dep:carta-writers", "carta-writers/org"]
write-beamer = ["dep:carta-writers", "carta-writers/beamer"]
write-revealjs = ["dep:carta-writers", "carta-writers/revealjs"]
write-ipynb = ["dep:carta-writers", "carta-writers/ipynb"]
write-epub = ["dep:carta-writers", "carta-writers/epub"]
write-docx = ["dep:carta-writers", "carta-writers/docx"]
write-odt = ["dep:carta-writers", "carta-writers/odt"]
write-rtf = ["dep:carta-writers", "carta-writers/rtf"]

[dependencies]
carta-ast = { workspace = true }
carta-core = { workspace = true }
# The syntax-highlighting catalog behind the `highlight` feature.
carta-highlight = { workspace = true, optional = true }
# By path (not the workspace table) so this crate owns their feature selection; `version` makes the
# published package depend on the registry release.
carta-readers = { path = "../carta-readers", version = "0.0.8", default-features = false, optional = true }
carta-writers = { path = "../carta-writers", version = "0.0.8", default-features = false, optional = true }
# `meta-json`: serializes the rendered metadata into the standalone template context.
serde_json = { workspace = true, optional = true }
# CLI-only; kept out of a library build via the optional `cli` feature.
clap = { workspace = true, optional = true }
# Generators behind the binary's `--completions <shell>` and `--man` flags.
clap_complete = { version = "4", optional = true }
clap_mangen = { version = "0.3", optional = true }
# HTTP client behind `fetch`; rustls keeps the build free of a system OpenSSL dependency.
ureq = { version = "3", default-features = false, features = ["rustls"], optional = true }
# Grows the thread's stack on demand during serialization so a deep tree cannot exhaust it;
# same-thread (not a worker) because writer options may hold thread-affine state.
stacker = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }

# Gated on `cli` so a library-only build neither compiles the binary nor pulls its dependencies.
[[bin]]
name = "carta"
path = "src/main.rs"
required-features = ["cli"]

[[bench]]
name = "convert"
harness = false
