[package]
name = "oxidoc-cli"
description = "The oxidoc command-line interface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "oxidoc"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
oxidoc-ast = { workspace = true }
oxidoc-core = { workspace = true }
oxidoc-readers = { workspace = true }
oxidoc-writers = { workspace = true }
clap = { workspace = true }
