[package]
name = "oxidoc-cli"
description = "The oxidoc command-line interface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "oxidoc"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
oxidoc = { workspace = true }
clap = { workspace = true }
