[package]
name = "oxidoc-core"
description = "Shared conversion options, error types, and text/attribute helpers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
oxidoc-ast = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
