[package]
name = "oxidoc-readers"
description = "Input-format readers: parse a source format's text into the document model."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
oxidoc-ast = { workspace = true }
oxidoc-core = { workspace = true }
unicode-general-category = { workspace = true }
caseless = { workspace = true }

[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
