[package]
name = "oxidoc-testkit"
description = "Differential test harness: drives the pinned pandoc binary as a black-box oracle."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
oxidoc-ast = { workspace = true }
serde_json = { workspace = true }
