[package]
name = "oxidoc-writers"
description = "Output-format writers: render the document model to a target format's text."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = ["html", "json"]
html = ["dep:unicode-general-category"]
json = []

[dependencies]
oxidoc-ast = { workspace = true }
oxidoc-core = { workspace = true }
unicode-general-category = { workspace = true, optional = true }
